# everust

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs
src/math/: euclidean.rs  mod.rs
src/search/: binary_search.rs  binary_search_first.rs  binary_search_last.rs  mod.rs
src/sort/: bubble_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  selection_sort.rs
